--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,13 +39,11 @@
         <activity android:name=".CardReader" />
         <activity android:name=".ImageViewer" />
 
-        <receiver android:name=".SdCardBroadcastReceiver">
+        <receiver android:name=".SdCardBroadcastReceiver" android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_UNMOUNTED" />
                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
                 <action android:name="android.intent.action.MEDIA_EJECT" />
-
-
                 <data android:scheme="file" />
             </intent-filter>
         </receiver>
